--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "ngx-datatable": "github:Reboog711/ngx-datatable#angular-13-take-3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
