--- a/spica-final-1/angular.json
+++ b/spica-final-1/angular.json
@@ -27,6 +27,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
               "src/styles.css",
               "./node_modules/jqwidgets-ng/jqwidgets/styles/jqx.base.css"
             ],
@@ -98,6 +99,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
               "src/styles.css",
               "./node_modules/jqwidgets-ng/jqwidgets/styles/jqx.base.css"
             ],
